internal/http/www/static/www.css
/**
 * SparkleMuffin
 * Copyright (c) 2022 VirtualTam <virtualtam@flibidi.net>
 * SPDX-License-Identifier: MIT
 */

/**
 * Exo2 font family by Nathaniel Gama
 * https://github.com/NDISCOVER/Exo-2.0
 *
 * Exo2 is licensed under the SIL Open Font License, Version 1.1. This license
 * is available with a FAQ at https://scripts.sil.org/OFL
 */
@font-face {
  font-family: "exo2";
  src: url("/static/exo2/Exo2-VariableFont_wght.ttf");
  font-display: block;
}

/**
 * Fira Code font family by The Fira Code Project Authors
 * https://github.com/tonsky/FiraCode
 *
 * Fira Code is licensed under the SIL Open Font License, Version 1.1. This
 * license is available with a FAQ at https://scripts.sil.org/OFL
 */
@font-face {
  font-family: "firacode";
  src: url("/static/firacode/FiraCode-VF.ttf");
  font-display: block;
}

/* Global */
html,
body,
button,
input {
  font-family: exo2, sans;
}

a:hover {
  text-decoration: underline;
}

code {
  font-family: firacode, monospace;
  font-size: 14px;
}

/* Bulma */
.dropdown-menu {
  min-width: 4ch;
}

.footer .logo {
  color: var(--bulma-success-30);
}

.icon-text {
  flex-wrap: nowrap;
}

.tag a {
  color: var(--bulma-text);
}

/* Bookmarks */
.bookmark-title {
  color: var(--bulma-text);
}

.tag-count {
  display: inline-block;
  width: 4em;
}

/* Feeds */
.feed-title {
  color: var(--bulma-text);
}

